# scribyte

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  pyrightconfig.json  recorder.py  silence_chunked_whisper.py  transcriber.py  wasapi_debug.py
app/: __init__.py  dependencies.py  logging_config.py  main.py
app/api/: __init__.py
app/api/routes/: __init__.py  dictation.py
app/core/: __init__.py  config.py
app/schemas/: __init__.py  dictation.py
app/services/: __init__.py  debug_audio.py  recorder.py  recorder_audio.py  recorder_contract.py  recorder_devices.py  recorder_sounddevice.py  transcriber.py
client/linux/: scribyte_hotkey_linux.py
client/windows/: scribyte.ahk  scribyte_start.cmd
docs/reference/: README.md  silence_chunked_whisper.py
plans/: PLAN.md
scripts/: audio_device_debug.py  check_device.py  wasapi_debug.py
tests/: test_api.py  test_integration_cpu.py  test_integration_gpu.py  test_integration_npu.py  test_npu_transcription.py  test_recorder.py  test_recorder_devices.py  test_transcriber.py
tests/test-audio/: sample1.txt
typings/librosa/: __init__.pyi  effects.pyi
typings/openvino_genai/: __init__.pyi
typings/sounddevice/: __init__.pyi
typings/soundfile/: __init__.pyi
