[project]
name = "scribyte"
version = "0.1.0"
description = "Windows-first global dictation with OpenVINO Whisper on Intel NPU"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
	"fastapi[standard]>=0.115.0",
	"librosa>=0.11.0",
	"numpy>=2.0.0",
	"openvino-genai>=2026.2.0.0",
	"sounddevice>=0.5.0",
	"soundfile>=0.13.0",
	"uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
	"httpx>=0.28.0",
	"pytest>=8.0.0",
]
model-export = [
	"openvino>=2026.2.0",
	"openvino-tokenizers>=2026.2.0.0",
	"optimum-intel>=1.20.0",
	"torch>=2.7.0",
	"torchvision>=0.22.0",
	"transformers>=4.52.0",
]

[tool.fastapi]
entrypoint = "app.main:app"
